# mlops2025w_142201034

./: .gitignore
Assignments/Assignment_2/: README
Assignments/Assignment_2/docs/: usage.md
Assignments/Assignment_2/src/: calculator.py  utils.py
Assignments/Assignment_4/: .gitignore  README.md  pyproject.toml
Assignments/Assignment_4/1_sql_database/: setup_sql.py
Assignments/Assignment_4/2_mongodb_models/: setup_mongo.py
Assignments/Assignment_4/3_performance_comparison/: crud_comparison.py
Assignments/Assignment_4/4_atlas_deployment/: deploy_to_atlas.py
Assignments/Assignment_5/: .gitignore  README.md  pyproject.toml
Assignments/Assignment_5/src/: question1_conll_ner.py  question2_snorkel_labeling.py  question3_label_aggregation.py  question4_cifar_experiments.py
Class/Week11/: .gitignore  mlops_wandb_monitoring_lab.ipynb
Class/Week3/: filename.sh  filename_rev1.sh  output.txt
Class/Week4/: main.py  pyproject.toml
Class/Week4/week4.egg-info/: PKG-INFO  SOURCES.txt
Class/Week8/: .gitignore  wandb_cloud_deploy_lab_detailed.ipynb
Class/Week8/app/: main.py
Class/Week9/: cifar100_wandb_hf.ipynb
