[project]
name = "mlops-assignment5"
version = "0.1.0"
description = "MLOps Assignment 5: NER with Snorkel and CIFAR experiments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "wandb>=0.15.0",
    "snorkel>=0.9.9",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
